# ai-service-kit

./: CREDENTIALS_AND_CONFIG.md  README.md  example.env  local-only.env  pyproject.toml
examples/: cloud_logging_example.py  credentials_and_config_demo.py  local_only_logging.py
src/ai_service_kit/: __init__.py  utils.py
src/ai_service_kit/health/: __init__.py  checks.py  metrics.py  models.py  service.py
src/ai_service_kit/logging/: __init__.py  cloud.py  config.py  decorators.py  logger.py  middleware.py  setup.py
src/ai_service_kit/providers/: __init__.py  base.py  factory.py  registry.py
src/ai_service_kit/vectorstores/: __init__.py  base.py  models.py
tests/: test_cloud_logging.py  test_health.py  test_logging.py  test_providers.py  test_static_logger.py  test_utils.py  test_vectorstores.py
