[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-service-kit"
version = "0.1.0"
description = "Reusable provider, health, metrics, and vector store abstractions for AI services."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mani" }
]
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
